chore: improve migration docs, add parser edge-case tests, and adjust Grafana provisioning

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -325,4 +325,5 @@ jobs:
 
             docker compose pull
             docker compose up -d --remove-orphans
+            docker compose restart grafana
             docker image prune -f
