chore(ci): make deploys reproducible and reload Grafana dashboards

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,7 +239,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Go module tidy (so Docker build won't fail)
+      - name: Go module tidy
         run: go mod tidy
 
       - uses: docker/login-action@v3
@@ -248,11 +248,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: docker/build-push-action@v6
+      - name: Build & push (latest + sha)
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ghcr.io/gitdengas123456/devops-valgfag:latest
+          tags: |
+            ghcr.io/gitdengas123456/devops-valgfag:latest
+            ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }}
 
   # -------------------------
   # Deploy to VM via SSH
@@ -279,7 +282,8 @@ jobs:
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
 
-          APP_IMAGE_TAG: latest
+          # Deploy an immutable tag for reproducibility (matches the pushed SHA tag)
+          APP_IMAGE_TAG: ${{ github.sha }}
 
         with:
           host: ${{ vars.PROD_SSH_HOST }}
@@ -303,11 +307,15 @@ jobs:
             : "${DMI_API_KEY:?Missing DMI_API_KEY (secret)}"
             : "${GF_SECURITY_ADMIN_USER:?Missing GF_SECURITY_ADMIN_USER (secret)}"
             : "${GF_SECURITY_ADMIN_PASSWORD:?Missing GF_SECURITY_ADMIN_PASSWORD (secret)}"
+            : "${APP_IMAGE_TAG:?Missing APP_IMAGE_TAG}"
 
             cd "${DEPLOY_PATH}"
+
+            # Ensure the VM is exactly on the latest main
             git fetch origin main
             git reset --hard origin/main
 
+            # Write .env used by docker compose on the VM
             umask 077
             cat > .env <<EOF
             APP_ENV=prod
@@ -323,7 +331,23 @@ jobs:
             EOF
             chmod 600 .env
 
+            # Debug: checksum the dashboard JSON on the VM (verifies git updated the file)
+            echo "Dashboard file checksum on VM:"
+            sha256sum monitoring/grafana/search-monitoring-dashboard.json || true
+
+            # Pull updated images (app image is now pinned by SHA tag)
             docker compose pull
+
+            # Apply the stack (recreate if needed, keep volumes)
             docker compose up -d --remove-orphans
-            docker compose restart grafana
+
+            # Recreate ONLY the Grafana container
+            # This forces Grafana to restart cleanly and re-run provisioning
+            docker compose up -d --force-recreate grafana
+
+            # Debug: checksum the dashboard JSON as seen inside Grafana container
+            echo "Dashboard file checksum inside Grafana container:"
+            docker exec -i grafana sh -lc 'sha256sum /var/lib/grafana/dashboards/search-monitoring-dashboard.json || true'
+
+            # Cleanup
             docker image prune -f
