--- a/monitoring/grafana/provisioning/dashboards/dashboard.yml
+++ b/monitoring/grafana/provisioning/dashboards/dashboard.yml
@@ -2,10 +2,11 @@ apiVersion: 1
 
 providers:
   - name: Search Monitoring
-    uid: search-monitoring
     type: file
-    allowUiUpdates: false
+    orgId: 1
+    folder: ""
     disableDeletion: true
+    editable: false
     updateIntervalSeconds: 10
     options:
       path: /var/lib/grafana/dashboards
