--- a/monitoring/grafana/provisioning/dashboards/dashboard.yml
+++ b/monitoring/grafana/provisioning/dashboards/dashboard.yml
@@ -7,7 +7,7 @@ providers:
     orgId: 1
     folder: ""
     disableDeletion: true
-    editable: false
+    allowUiUpdates: false
     updateIntervalSeconds: 10
     options:
       path: /var/lib/grafana/dashboards
