--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -374,43 +374,49 @@ jobs:
             # Recreate grafana once so provisioning reloads dashboards from JSON
             docker compose up -d --force-recreate grafana
             
-            # Wait until grafana container is running before exec (avoid flaky deploys)
-            echo "Waiting for Grafana container..."
-            for i in $(seq 1 30); do
-              if docker inspect -f '{{.State.Running}}' grafana 2>/dev/null | grep -q true; then
+            echo "Waiting for Grafana HTTP API..."
+            for i in $(seq 1 60); do
+              if docker exec grafana sh -lc 'curl -fsS http://127.0.0.1:3000/api/health >/dev/null'; then
+                echo "Grafana is healthy."
                 break
               fi
               sleep 2
             done
             
-            # After waiting, ensure Grafana actually reached Running state
-            if ! docker inspect -f '{{.State.Running}}' grafana 2>/dev/null | grep -q true; then
-              echo "ERROR: Grafana did not reach Running state in time" >&2
+            docker exec grafana sh -lc 'curl -fsS http://127.0.0.1:3000/api/health >/dev/null' || {
+              echo "ERROR: Grafana API not reachable" >&2
               docker logs grafana || true
               exit 1
-            fi
+            }
             
             # --- Force dashboards to be file-provisioned (delete DB copies by UID) ---
             echo "Deleting dashboards by UID (to avoid DB overriding provisioned files)..."
             docker exec grafana sh -lc "
               set -e
               curl -sS -u \"${GF_SECURITY_ADMIN_USER}:${GF_SECURITY_ADMIN_PASSWORD}\" \
-                -X DELETE http://localhost:3000/api/dashboards/uid/whoknows-health >/dev/null || true
+                -X DELETE http://127.0.0.1:3000/api/dashboards/uid/whoknows-health >/dev/null || true
               curl -sS -u \"${GF_SECURITY_ADMIN_USER}:${GF_SECURITY_ADMIN_PASSWORD}\" \
-                -X DELETE http://localhost:3000/api/dashboards/uid/postgres-metrics >/dev/null || true
+                -X DELETE http://127.0.0.1:3000/api/dashboards/uid/postgres-metrics >/dev/null || true
             "
             
             # Recreate grafana so provisioning re-imports JSON cleanly
             docker compose up -d --force-recreate grafana
             
-            # Wait again (new container)
-            echo "Waiting for Grafana container (after recreate)..."
-            for i in $(seq 1 30); do
-              if docker inspect -f '{{.State.Running}}' grafana 2>/dev/null | grep -q true; then
+            # Wait again (new container) - IMPORTANT: wait for HTTP API, not just "Running"
+            echo "Waiting for Grafana HTTP API (after recreate)..."
+            for i in $(seq 1 60); do
+              if docker exec grafana sh -lc 'curl -fsS http://127.0.0.1:3000/api/health >/dev/null'; then
+                echo "Grafana is healthy (after recreate)."
                 break
               fi
               sleep 2
             done
+            
+            docker exec grafana sh -lc 'curl -fsS http://127.0.0.1:3000/api/health >/dev/null' || {
+              echo "ERROR: Grafana API not reachable after recreate" >&2
+              docker logs grafana || true
+              exit 1
+            }
             
             echo "Dashboard file checksum inside Grafana container:"
             docker exec grafana sha256sum /var/lib/grafana/dashboards/search-monitoring-dashboard.json || true
